syntax = "proto3";

option csharp_namespace = "GrpcServer";

service loginUser {
	rpc loginUserOp (UserData) returns (LoginResult);
}

message UserData {
	string userName = 1;
	string password = 2;
}

message LoginResult {
	bool result = 1;
	string operadora = 2;
	string userName	= 3;
}
